--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Кол-во потоков
 translator.thread.qnty=5
 # Возможные принимаемые значения: YANDEX, TRANSLIT
 translator.vendor=YANDEX
@@ -11,6 +12,9 @@ translator.logger=SPRING_JDBC
 yandex.key=trnsl.1.1.20190703T200023Z.e1b59cf9639123be.c57ca30faf014639f0b1fdc6998792435241f195
 #
 #
+#Port and Log
+logging.file=./log/Translator.log
+server.port=8080
 #
 # Database setup
 spring.datasource.url=jdbc:h2:mem:translatordb
